--- a/src/makefile
+++ b/src/makefile
@@ -1,16 +1,17 @@
 include prorab.mk
 
 
-this_name := morda
+this_name := mordavokne
 
 this_soname := $(shell cat $(prorab_this_dir)/soname.txt)
 
-this_srcs := $(shell find $(patsubst %/,%,$(prorab_this_dir)) -name *.cpp) #find all .cpp files
-this_srcs := $(patsubst $(prorab_this_dir)%,%,$(this_srcs)) #remove this dir prefix
+this_srcs += mordavokne/App.cpp
 
 
 ifeq ($(prorab_os), macosx)
     this_mm_src := mordavokne/glue/macosx/main.mm
+else
+    this_srcs += mordavokne/glue/main.cpp
 endif
 
 
@@ -41,24 +42,19 @@ endif
 
 ifeq ($(prorab_os), linux)
     this_cxxflags += -fPIC #generate position independent code
-    this_cxxflags += `pkg-config --cflags freetype2`
-    this_ldlibs += -lpthread -lX11 -lGL -lGLEW -ljpeg -lpng `pkg-config --libs freetype2` -lz
+    this_ldlibs += -lpthread -lX11 -lGL -lGLEW
 else ifeq ($(prorab_os), windows)
-    this_cxxflags += -Wno-format #due to bugs in some g++ versions it warns about format when not needed, so disable format warnings
-    this_cxxflags += -I/usr/include -I/usr/local/include/ -I/usr/local/include/freetype2
+#    this_cxxflags += -Wno-format #due to bugs in some g++ versions it warns about format when not needed, so disable format warnings
+#    this_cxxflags += -I/usr/include -I/usr/local/include/ -I/usr/local/include/freetype2
     this_cxxflags += -DM_MORDA_ENFORCE_OPENGL_UNDER_WINDOWS
-    this_ldflags += -L/usr/local/lib -L/usr/lib
+#    this_ldflags += -L/usr/local/lib -L/usr/lib
 
     #NOTE: order matters in MinGW, libs referenced by other libs should go after those libs which reference them.
-    this_ldlibs += -lfreetype -ljpeg -lpng -lz -lopengl32 -lglew32 -lgdi32
-
-    #WORKAROUND for MinGW bug:
-    this_cxxflags += -D__STDC_FORMAT_MACROS
+    #this_ldlibs += -lfreetype -ljpeg -lpng -lz -lopengl32 -lglew32 -lgdi32
 else ifeq ($(prorab_os), macosx)
     this_cxxflags += -stdlib=libc++ #this is needed to be able to use c++11 std lib
-    this_cxxflags += -I/usr/local/include/freetype2
     this_ldlibs += -lc++
-    this_ldlibs += -framework Cocoa -framework OpenGL -lpng -lfreetype -ljpeg -lGLEW
+    this_ldlibs += -framework Cocoa -framework OpenGL -lGLEW
     
     this_mm_obj := $(prorab_this_dir)$(prorab_obj_dir)mordavokne/glue/macosx/main.o
 
@@ -71,7 +67,7 @@ else ifeq ($(prorab_os), macosx)
     $(eval $(this_rules))
 endif
 
-this_ldlibs += -lnitki -lpogodi -lpapki -laika -lstob -lsvgdom -lsvgren
+this_ldlibs +=
 
 $(eval $(prorab-build-lib))
 
