--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ before_install:
     echo "deb https://dl.bintray.com/igagis/deb /" | sudo tee /etc/apt/sources.list.d/igagis.list > /dev/null &&
     sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 379CE192D401AB61 &&
     sudo apt-get update -qq &&
-    sudo apt-get install -qq debhelper prorab doxygen libutki-dev libpapki-dev libglew-dev libmorda-dev libnitki-dev libkolme-dev;
+    sudo apt-get install -qq debhelper prorab doxygen libutki-dev libpapki-dev libglew-dev libmorda-dev libnitki-dev libkolme-dev libstob-dev;
   fi
 - if [ "$TRAVIS_OS_NAME" == "osx" ]; then
     rvm use ruby-2.2.1 &&
@@ -37,7 +37,7 @@ before_install:
     brew tap igagis/tap &&
     brew update > /dev/null &&
     (brew list libpng || brew install libpng) &&
-    brew install prorab libutki libpapki glew libmorda libkolme;
+    brew install prorab libutki libpapki glew libmorda libkolme libstob;
   fi
 
 
