--- a/homebrew/libmordavokne.rb.in
+++ b/homebrew/libmordavokne.rb.in
@@ -1,5 +1,5 @@
 class Libmordavokne < Formula
-  desc "C++ cross-platform OpenGL based GUI library."
+  desc "Intrusive C++ cross-platform OpenGL based GUI library."
   homepage "https://github.com/igagis/mordavokne"
   url "https://github.com/igagis/mordavokne/archive/$(version).tar.gz"
   sha256 "$(sha256)"
@@ -8,20 +8,14 @@ class Libmordavokne < Formula
   depends_on "libutki"
   depends_on "libpapki"
   depends_on "libpogodi"
-  depends_on "libunikod"
   depends_on "libaika"
   depends_on "libstob"
-  depends_on "libpng"
-  depends_on "jpeg"
-  depends_on "z"
   depends_on "glew"
-  depends_on "freetype"
   depends_on "libkolme"
-  depends_on "libsvgren"
   
   def install
     ENV['PATH'] += ':/usr/local/bin'
-    system "make", "install"
+    system "make", "-f", "src/makefile", "install"
   end
 
   #test do
