--- a/cocoapods/libmordavokne.podspec.in
+++ b/cocoapods/libmordavokne.podspec.in
@@ -1,7 +1,7 @@
 Pod::Spec.new do |s|
   s.name         = "libmordavokne"
   s.version      = "$(version)"
-  s.summary      = "C++ cross-platform GUI library."
+  s.summary      = "Intrusive C++ cross-platform GUI library."
   s.homepage     = "https://github.com/igagis/mordavokne"
   s.license      = 'MIT'
   s.author       = { "Ivan Gagis" => "igagis@gmail.com" }
@@ -11,9 +11,6 @@ Pod::Spec.new do |s|
 
   s.source_files  = "src/**/*.{hpp,h,cpp,inc}", "src/mordavokne/glue/ios/main.mm"
   s.header_mappings_dir = "src"
-
-  #workaround for freetype-related compiling problems
-  s.xcconfig = { 'HEADER_SEARCH_PATHS' => '"${PODS_ROOT}/Headers/Private/freetype"' }
 
   #we don't use Objective-C Automatic Resource Counting
   s.requires_arc = false
@@ -29,8 +26,4 @@ Pod::Spec.new do |s|
   s.dependency 'libkolme', '>= 1.0.6'
   s.dependency 'libstob', '>= 3.2.3'
   s.dependency 'libaika', '>= 1.0.7'
-  s.dependency 'libpng_igagis', '>= 1.4.1'
-  s.dependency 'freetype', '>= 2.6.4'
-  s.dependency 'libjpeg', '>= 6.1.1'
-  s.dependency 'libsvgren', '>= 0.3.13'
 end
