--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,10 +1,11 @@
 source 'https://github.com/CocoaPods/Specs.git'
 source 'https://github.com/igagis/cocoapods-repo.git'
 
-target "morda_test" do
+target "tests" do
 	pod 'libutki', '>= 1.0.20'
 	pod 'libpapki', '>= 1.0.3'
 	pod 'libkolme', '>= 1.0.1'
 	pod 'libstob', '>= 3.1.1'
 	pod 'libaika', '>= 1.0.2'
+	pod 'libmorda', '>= 0.4.4'
 end
