--- a/msvs_solution/tests/tests.vcxproj
+++ b/msvs_solution/tests/tests.vcxproj
@@ -147,26 +147,31 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\mordavokne\mordavokne.vcxproj">
+      <Project>{1f656b83-1e51-406c-af65-60249f4b2cb7}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="..\packages\freetype2.2.6.0.1\build\native\freetype2.targets" Condition="Exists('..\packages\freetype2.2.6.0.1\build\native\freetype2.targets')" />
     <Import Project="..\packages\glew.v140.1.12.0\build\native\glew.v140.targets" Condition="Exists('..\packages\glew.v140.1.12.0\build\native\glew.v140.targets')" />
-    <Import Project="..\packages\libjpeg.redist.9.0.1.4\build\native\libjpeg.redist.targets" Condition="Exists('..\packages\libjpeg.redist.9.0.1.4\build\native\libjpeg.redist.targets')" />
-    <Import Project="..\packages\libjpeg.9.0.1.4\build\native\libjpeg.targets" Condition="Exists('..\packages\libjpeg.9.0.1.4\build\native\libjpeg.targets')" />
-    <Import Project="..\packages\libpng.redist.1.5.10.13\build\native\libpng.redist.targets" Condition="Exists('..\packages\libpng.redist.1.5.10.13\build\native\libpng.redist.targets')" />
     <Import Project="..\packages\libutki.1.0.20\build\native\libutki.targets" Condition="Exists('..\packages\libutki.1.0.20\build\native\libutki.targets')" />
-    <Import Project="..\packages\libkolme.1.0.0.1\build\native\libkolme.targets" Condition="Exists('..\packages\libkolme.1.0.0.1\build\native\libkolme.targets')" />
-    <Import Project="..\packages\libpapki.1.0.2.2\build\native\libpapki.targets" Condition="Exists('..\packages\libpapki.1.0.2.2\build\native\libpapki.targets')" />
-    <Import Project="..\packages\libpogodi.1.0.1.8\build\native\libpogodi.targets" Condition="Exists('..\packages\libpogodi.1.0.1.8\build\native\libpogodi.targets')" />
-    <Import Project="..\packages\libnitki.1.0.1.6\build\native\libnitki.targets" Condition="Exists('..\packages\libnitki.1.0.1.6\build\native\libnitki.targets')" />
-    <Import Project="..\packages\libaika.1.0.1.3\build\native\libaika.targets" Condition="Exists('..\packages\libaika.1.0.1.3\build\native\libaika.targets')" />
-    <Import Project="..\packages\libunikod.1.0.2.2\build\native\libunikod.targets" Condition="Exists('..\packages\libunikod.1.0.2.2\build\native\libunikod.targets')" />
-    <Import Project="..\packages\libstob.3.1.0.1\build\native\libstob.targets" Condition="Exists('..\packages\libstob.3.1.0.1\build\native\libstob.targets')" />
     <Import Project="..\packages\zlib.v120.windesktop.msvcstl.dyn.rt-dyn.1.2.8.8\build\native\zlib.v120.windesktop.msvcstl.dyn.rt-dyn.targets" Condition="Exists('..\packages\zlib.v120.windesktop.msvcstl.dyn.rt-dyn.1.2.8.8\build\native\zlib.v120.windesktop.msvcstl.dyn.rt-dyn.targets')" />
     <Import Project="..\packages\zlib.v140.windesktop.msvcstl.dyn.rt-dyn.1.2.8.8\build\native\zlib.v140.windesktop.msvcstl.dyn.rt-dyn.targets" Condition="Exists('..\packages\zlib.v140.windesktop.msvcstl.dyn.rt-dyn.1.2.8.8\build\native\zlib.v140.windesktop.msvcstl.dyn.rt-dyn.targets')" />
-    <Import Project="..\packages\libpng.1.5.10.13\build\native\libpng.targets" Condition="Exists('..\packages\libpng.1.5.10.13\build\native\libpng.targets')" />
     <Import Project="..\packages\libmorda.0.4.4\build\native\libmorda.targets" Condition="Exists('..\packages\libmorda.0.4.4\build\native\libmorda.targets')" />
     <Import Project="..\packages\libmorda.symbols.0.4.4\build\native\libmorda.symbols.targets" Condition="Exists('..\packages\libmorda.symbols.0.4.4\build\native\libmorda.symbols.targets')" />
+    <Import Project="..\packages\libjpeg.redist.9.2.0.1\build\native\libjpeg.redist.targets" Condition="Exists('..\packages\libjpeg.redist.9.2.0.1\build\native\libjpeg.redist.targets')" />
+    <Import Project="..\packages\libjpeg.9.2.0.1\build\native\libjpeg.targets" Condition="Exists('..\packages\libjpeg.9.2.0.1\build\native\libjpeg.targets')" />
+    <Import Project="..\packages\libpng.redist.1.6.23.1\build\native\libpng.redist.targets" Condition="Exists('..\packages\libpng.redist.1.6.23.1\build\native\libpng.redist.targets')" />
+    <Import Project="..\packages\libkolme.1.0.6\build\native\libkolme.targets" Condition="Exists('..\packages\libkolme.1.0.6\build\native\libkolme.targets')" />
+    <Import Project="..\packages\libpapki.1.0.11\build\native\libpapki.targets" Condition="Exists('..\packages\libpapki.1.0.11\build\native\libpapki.targets')" />
+    <Import Project="..\packages\libpogodi.1.0.8\build\native\libpogodi.targets" Condition="Exists('..\packages\libpogodi.1.0.8\build\native\libpogodi.targets')" />
+    <Import Project="..\packages\libnitki.1.0.8\build\native\libnitki.targets" Condition="Exists('..\packages\libnitki.1.0.8\build\native\libnitki.targets')" />
+    <Import Project="..\packages\libaika.1.0.7\build\native\libaika.targets" Condition="Exists('..\packages\libaika.1.0.7\build\native\libaika.targets')" />
+    <Import Project="..\packages\libunikod.2.0.4\build\native\libunikod.targets" Condition="Exists('..\packages\libunikod.2.0.4\build\native\libunikod.targets')" />
+    <Import Project="..\packages\libstob.3.2.3\build\native\libstob.targets" Condition="Exists('..\packages\libstob.3.2.3\build\native\libstob.targets')" />
+    <Import Project="..\packages\libpng.1.6.23.1\build\native\libpng.targets" Condition="Exists('..\packages\libpng.1.6.23.1\build\native\libpng.targets')" />
   </ImportGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
@@ -174,21 +179,21 @@
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\freetype2.2.6.0.1\build\native\freetype2.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\freetype2.2.6.0.1\build\native\freetype2.targets'))" />
     <Error Condition="!Exists('..\packages\glew.v140.1.12.0\build\native\glew.v140.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\glew.v140.1.12.0\build\native\glew.v140.targets'))" />
-    <Error Condition="!Exists('..\packages\libjpeg.redist.9.0.1.4\build\native\libjpeg.redist.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libjpeg.redist.9.0.1.4\build\native\libjpeg.redist.targets'))" />
-    <Error Condition="!Exists('..\packages\libjpeg.9.0.1.4\build\native\libjpeg.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libjpeg.9.0.1.4\build\native\libjpeg.targets'))" />
-    <Error Condition="!Exists('..\packages\libpng.redist.1.5.10.13\build\native\libpng.redist.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libpng.redist.1.5.10.13\build\native\libpng.redist.targets'))" />
     <Error Condition="!Exists('..\packages\libutki.1.0.20\build\native\libutki.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libutki.1.0.20\build\native\libutki.targets'))" />
-    <Error Condition="!Exists('..\packages\libkolme.1.0.0.1\build\native\libkolme.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libkolme.1.0.0.1\build\native\libkolme.targets'))" />
-    <Error Condition="!Exists('..\packages\libpapki.1.0.2.2\build\native\libpapki.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libpapki.1.0.2.2\build\native\libpapki.targets'))" />
-    <Error Condition="!Exists('..\packages\libpogodi.1.0.1.8\build\native\libpogodi.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libpogodi.1.0.1.8\build\native\libpogodi.targets'))" />
-    <Error Condition="!Exists('..\packages\libnitki.1.0.1.6\build\native\libnitki.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libnitki.1.0.1.6\build\native\libnitki.targets'))" />
-    <Error Condition="!Exists('..\packages\libaika.1.0.1.3\build\native\libaika.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libaika.1.0.1.3\build\native\libaika.targets'))" />
-    <Error Condition="!Exists('..\packages\libunikod.1.0.2.2\build\native\libunikod.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libunikod.1.0.2.2\build\native\libunikod.targets'))" />
-    <Error Condition="!Exists('..\packages\libstob.3.1.0.1\build\native\libstob.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libstob.3.1.0.1\build\native\libstob.targets'))" />
     <Error Condition="!Exists('..\packages\zlib.v120.windesktop.msvcstl.dyn.rt-dyn.1.2.8.8\build\native\zlib.v120.windesktop.msvcstl.dyn.rt-dyn.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\zlib.v120.windesktop.msvcstl.dyn.rt-dyn.1.2.8.8\build\native\zlib.v120.windesktop.msvcstl.dyn.rt-dyn.targets'))" />
     <Error Condition="!Exists('..\packages\zlib.v140.windesktop.msvcstl.dyn.rt-dyn.1.2.8.8\build\native\zlib.v140.windesktop.msvcstl.dyn.rt-dyn.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\zlib.v140.windesktop.msvcstl.dyn.rt-dyn.1.2.8.8\build\native\zlib.v140.windesktop.msvcstl.dyn.rt-dyn.targets'))" />
-    <Error Condition="!Exists('..\packages\libpng.1.5.10.13\build\native\libpng.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libpng.1.5.10.13\build\native\libpng.targets'))" />
     <Error Condition="!Exists('..\packages\libmorda.0.4.4\build\native\libmorda.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libmorda.0.4.4\build\native\libmorda.targets'))" />
     <Error Condition="!Exists('..\packages\libmorda.symbols.0.4.4\build\native\libmorda.symbols.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libmorda.symbols.0.4.4\build\native\libmorda.symbols.targets'))" />
+    <Error Condition="!Exists('..\packages\libjpeg.redist.9.2.0.1\build\native\libjpeg.redist.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libjpeg.redist.9.2.0.1\build\native\libjpeg.redist.targets'))" />
+    <Error Condition="!Exists('..\packages\libjpeg.9.2.0.1\build\native\libjpeg.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libjpeg.9.2.0.1\build\native\libjpeg.targets'))" />
+    <Error Condition="!Exists('..\packages\libpng.redist.1.6.23.1\build\native\libpng.redist.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libpng.redist.1.6.23.1\build\native\libpng.redist.targets'))" />
+    <Error Condition="!Exists('..\packages\libkolme.1.0.6\build\native\libkolme.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libkolme.1.0.6\build\native\libkolme.targets'))" />
+    <Error Condition="!Exists('..\packages\libpapki.1.0.11\build\native\libpapki.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libpapki.1.0.11\build\native\libpapki.targets'))" />
+    <Error Condition="!Exists('..\packages\libpogodi.1.0.8\build\native\libpogodi.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libpogodi.1.0.8\build\native\libpogodi.targets'))" />
+    <Error Condition="!Exists('..\packages\libnitki.1.0.8\build\native\libnitki.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libnitki.1.0.8\build\native\libnitki.targets'))" />
+    <Error Condition="!Exists('..\packages\libaika.1.0.7\build\native\libaika.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libaika.1.0.7\build\native\libaika.targets'))" />
+    <Error Condition="!Exists('..\packages\libunikod.2.0.4\build\native\libunikod.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libunikod.2.0.4\build\native\libunikod.targets'))" />
+    <Error Condition="!Exists('..\packages\libstob.3.2.3\build\native\libstob.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libstob.3.2.3\build\native\libstob.targets'))" />
+    <Error Condition="!Exists('..\packages\libpng.1.6.23.1\build\native\libpng.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libpng.1.6.23.1\build\native\libpng.targets'))" />
   </Target>
 </Project>
