--- a/travis_bintray.json.in
+++ b/travis_bintray.json.in
@@ -13,6 +13,18 @@
 		{
 			"includePattern": "../(.[^/]*(\\.deb)$)",
 			"uploadPattern": "$1"
+		},
+		{
+			"includePattern": "../(.[^/]*(\\.dsc)$)",
+			"uploadPattern": "$1"
+		},
+		{
+			"includePattern": "../(.[^/]*(\\.tar\\.xz)$)",
+			"uploadPattern": "$1"
+		},
+		{
+			"includePattern": "../(.[^/]*(\\.tar\\.gz)$)",
+			"uploadPattern": "$1"
 		}
 	],
 	"publish": true,
