--- a/cocoapods/libmordavokne.podspec.in
+++ b/cocoapods/libmordavokne.podspec.in
@@ -21,9 +21,7 @@ Pod::Spec.new do |s|
   s.frameworks = 'GLKit'
 
   s.dependency 'libutki', '>= 1.0.20'
-  s.dependency 'libpogodi', '>= 1.0.8'
+  s.dependency 'libmorda', '>= 0.4.12'
   s.dependency 'libpapki', '>= 1.0.11'
   s.dependency 'libkolme', '>= 1.0.6'
-  s.dependency 'libstob', '>= 3.2.3'
-  s.dependency 'libaika', '>= 1.0.7'
 end
