--- a/.travis.yml
+++ b/.travis.yml
@@ -52,8 +52,7 @@ script:
 - if [ "$TRAVIS_OS_NAME" == "osx" ]; then
     make &&
     
-    set -o pipefail &&
-    xcodebuild -workspace ios/tests.xcworkspace -scheme tests CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO | grep -E -A 5 "(error|warning):";
+    xcodebuild -workspace ios/tests.xcworkspace -scheme tests CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO;
   fi
 
 before_deploy:
