--- a/.travis.yml
+++ b/.travis.yml
@@ -52,7 +52,17 @@ script:
 - if [ "$TRAVIS_OS_NAME" == "osx" ]; then
     make &&
     
-    xcodebuild -workspace ios/tests.xcworkspace -scheme tests CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO;
+    xcodebuild -workspace ios/tests.xcworkspace -scheme tests CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
+            | sed -e "s/export PATH=[^ ]*/export PATH=.../g"
+            | sed -e "s/[^ ]*\/clang /clang /g"
+            | sed -e "s/\(-[IWfF]\)[^ ]*/\1... /g"
+            | sed -e "s/-isystem [^ ]*/-isystem .../g"
+            | sed -e "s/-include [^ ]*/-include .../g"
+            | sed -e "s/-MF [^ ]*/-MF .../g"
+            | sed -e "s/--serialize-diagnostics [^ ]*/--serialize-diagnostics .../g"
+            | sed -e "s/-o [^ ]*/-o .../g"
+            | sed -e "s/-iquote [^ ]*/-iquote .../g"
+            | sed -e "s/-isysroot [^ ]*/-isysroot .../g";
   fi
 
 before_deploy:
