--- a/msvs_solution/mordavokne/mordavokne.vcxproj
+++ b/msvs_solution/mordavokne/mordavokne.vcxproj
@@ -154,13 +154,14 @@
     <Import Project="..\packages\libsvgren.0.3.13\build\native\libsvgren.targets" Condition="Exists('..\packages\libsvgren.0.3.13\build\native\libsvgren.targets')" />
     <Import Project="..\packages\pixman_static.0.32.4.2\build\native\pixman_static.targets" Condition="Exists('..\packages\pixman_static.0.32.4.2\build\native\pixman_static.targets')" />
     <Import Project="..\packages\cairo_static.1.12.8.2\build\native\cairo_static.targets" Condition="Exists('..\packages\cairo_static.1.12.8.2\build\native\cairo_static.targets')" />
-    <Import Project="..\packages\libmorda.symbols.0.5.0\build\native\libmorda.symbols.targets" Condition="Exists('..\packages\libmorda.symbols.0.5.0\build\native\libmorda.symbols.targets')" />
     <Import Project="..\packages\libutki.1.0.22\build\native\libutki.targets" Condition="Exists('..\packages\libutki.1.0.22\build\native\libutki.targets')" />
     <Import Project="..\packages\libpogodi.1.0.9\build\native\libpogodi.targets" Condition="Exists('..\packages\libpogodi.1.0.9\build\native\libpogodi.targets')" />
     <Import Project="..\packages\libnitki.1.0.12\build\native\libnitki.targets" Condition="Exists('..\packages\libnitki.1.0.12\build\native\libnitki.targets')" />
     <Import Project="..\packages\libstob.3.2.6\build\native\libstob.targets" Condition="Exists('..\packages\libstob.3.2.6\build\native\libstob.targets')" />
     <Import Project="..\packages\pugixml.1.7.2\build\native\pugixml.targets" Condition="Exists('..\packages\pugixml.1.7.2\build\native\pugixml.targets')" />
     <Import Project="..\packages\libmorda.0.5.0\build\native\libmorda.targets" Condition="Exists('..\packages\libmorda.0.5.0\build\native\libmorda.targets')" />
+    <Import Project="..\packages\libmorda.redist.0.5.1\build\native\libmorda.redist.targets" Condition="Exists('..\packages\libmorda.redist.0.5.1\build\native\libmorda.redist.targets')" />
+    <Import Project="..\packages\libmorda.symbols.0.5.1\build\native\libmorda.symbols.targets" Condition="Exists('..\packages\libmorda.symbols.0.5.1\build\native\libmorda.symbols.targets')" />
   </ImportGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
@@ -182,12 +183,13 @@
     <Error Condition="!Exists('..\packages\libsvgren.0.3.13\build\native\libsvgren.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libsvgren.0.3.13\build\native\libsvgren.targets'))" />
     <Error Condition="!Exists('..\packages\pixman_static.0.32.4.2\build\native\pixman_static.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\pixman_static.0.32.4.2\build\native\pixman_static.targets'))" />
     <Error Condition="!Exists('..\packages\cairo_static.1.12.8.2\build\native\cairo_static.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\cairo_static.1.12.8.2\build\native\cairo_static.targets'))" />
-    <Error Condition="!Exists('..\packages\libmorda.symbols.0.5.0\build\native\libmorda.symbols.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libmorda.symbols.0.5.0\build\native\libmorda.symbols.targets'))" />
     <Error Condition="!Exists('..\packages\libutki.1.0.22\build\native\libutki.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libutki.1.0.22\build\native\libutki.targets'))" />
     <Error Condition="!Exists('..\packages\libpogodi.1.0.9\build\native\libpogodi.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libpogodi.1.0.9\build\native\libpogodi.targets'))" />
     <Error Condition="!Exists('..\packages\libnitki.1.0.12\build\native\libnitki.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libnitki.1.0.12\build\native\libnitki.targets'))" />
     <Error Condition="!Exists('..\packages\libstob.3.2.6\build\native\libstob.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libstob.3.2.6\build\native\libstob.targets'))" />
     <Error Condition="!Exists('..\packages\pugixml.1.7.2\build\native\pugixml.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\pugixml.1.7.2\build\native\pugixml.targets'))" />
     <Error Condition="!Exists('..\packages\libmorda.0.5.0\build\native\libmorda.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libmorda.0.5.0\build\native\libmorda.targets'))" />
+    <Error Condition="!Exists('..\packages\libmorda.redist.0.5.1\build\native\libmorda.redist.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libmorda.redist.0.5.1\build\native\libmorda.redist.targets'))" />
+    <Error Condition="!Exists('..\packages\libmorda.symbols.0.5.1\build\native\libmorda.symbols.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libmorda.symbols.0.5.1\build\native\libmorda.symbols.targets'))" />
   </Target>
 </Project>
