--- a/msvs_solution/mordavokne/packages.config
+++ b/msvs_solution/mordavokne/packages.config
@@ -8,7 +8,8 @@
   <package id="libjpeg.redist" version="9.2.0.1" targetFramework="native" />
   <package id="libkolme" version="1.0.6" targetFramework="native" />
   <package id="libmorda" version="0.5.0" targetFramework="native" />
-  <package id="libmorda.symbols" version="0.5.0" targetFramework="native" />
+  <package id="libmorda.redist" version="0.5.1" targetFramework="native" />
+  <package id="libmorda.symbols" version="0.5.1" targetFramework="native" />
   <package id="libnitki" version="1.0.12" targetFramework="native" />
   <package id="libpapki" version="1.0.11" targetFramework="native" />
   <package id="libpng" version="1.6.23.1" targetFramework="native" />
