--- a/msvs_solution/tests/tests.vcxproj
+++ b/msvs_solution/tests/tests.vcxproj
@@ -158,7 +158,6 @@
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
-    <Import Project="..\packages\freetype2.2.6.0.1\build\native\freetype2.targets" Condition="Exists('..\packages\freetype2.2.6.0.1\build\native\freetype2.targets')" />
     <Import Project="..\packages\glew.v140.1.12.0\build\native\glew.v140.targets" Condition="Exists('..\packages\glew.v140.1.12.0\build\native\glew.v140.targets')" />
     <Import Project="..\packages\zlib.v120.windesktop.msvcstl.dyn.rt-dyn.1.2.8.8\build\native\zlib.v120.windesktop.msvcstl.dyn.rt-dyn.targets" Condition="Exists('..\packages\zlib.v120.windesktop.msvcstl.dyn.rt-dyn.1.2.8.8\build\native\zlib.v120.windesktop.msvcstl.dyn.rt-dyn.targets')" />
     <Import Project="..\packages\zlib.v140.windesktop.msvcstl.dyn.rt-dyn.1.2.8.8\build\native\zlib.v140.windesktop.msvcstl.dyn.rt-dyn.targets" Condition="Exists('..\packages\zlib.v140.windesktop.msvcstl.dyn.rt-dyn.1.2.8.8\build\native\zlib.v140.windesktop.msvcstl.dyn.rt-dyn.targets')" />
@@ -166,28 +165,26 @@
     <Import Project="..\packages\libjpeg.9.2.0.1\build\native\libjpeg.targets" Condition="Exists('..\packages\libjpeg.9.2.0.1\build\native\libjpeg.targets')" />
     <Import Project="..\packages\libpng.redist.1.6.23.1\build\native\libpng.redist.targets" Condition="Exists('..\packages\libpng.redist.1.6.23.1\build\native\libpng.redist.targets')" />
     <Import Project="..\packages\libkolme.1.0.6\build\native\libkolme.targets" Condition="Exists('..\packages\libkolme.1.0.6\build\native\libkolme.targets')" />
-    <Import Project="..\packages\libpapki.1.0.11\build\native\libpapki.targets" Condition="Exists('..\packages\libpapki.1.0.11\build\native\libpapki.targets')" />
-    <Import Project="..\packages\libaika.1.0.7\build\native\libaika.targets" Condition="Exists('..\packages\libaika.1.0.7\build\native\libaika.targets')" />
     <Import Project="..\packages\libunikod.2.0.4\build\native\libunikod.targets" Condition="Exists('..\packages\libunikod.2.0.4\build\native\libunikod.targets')" />
     <Import Project="..\packages\libpng.1.6.23.1\build\native\libpng.targets" Condition="Exists('..\packages\libpng.1.6.23.1\build\native\libpng.targets')" />
-    <Import Project="..\packages\libsvgdom.0.2.13\build\native\libsvgdom.targets" Condition="Exists('..\packages\libsvgdom.0.2.13\build\native\libsvgdom.targets')" />
-    <Import Project="..\packages\libsvgren.0.3.13\build\native\libsvgren.targets" Condition="Exists('..\packages\libsvgren.0.3.13\build\native\libsvgren.targets')" />
-    <Import Project="..\packages\pixman_static.0.32.4.2\build\native\pixman_static.targets" Condition="Exists('..\packages\pixman_static.0.32.4.2\build\native\pixman_static.targets')" />
-    <Import Project="..\packages\cairo_static.1.12.8.2\build\native\cairo_static.targets" Condition="Exists('..\packages\cairo_static.1.12.8.2\build\native\cairo_static.targets')" />
     <Import Project="..\packages\libutki.1.0.22\build\native\libutki.targets" Condition="Exists('..\packages\libutki.1.0.22\build\native\libutki.targets')" />
-    <Import Project="..\packages\libpogodi.1.0.9\build\native\libpogodi.targets" Condition="Exists('..\packages\libpogodi.1.0.9\build\native\libpogodi.targets')" />
-    <Import Project="..\packages\libnitki.1.0.12\build\native\libnitki.targets" Condition="Exists('..\packages\libnitki.1.0.12\build\native\libnitki.targets')" />
-    <Import Project="..\packages\libstob.3.2.6\build\native\libstob.targets" Condition="Exists('..\packages\libstob.3.2.6\build\native\libstob.targets')" />
     <Import Project="..\packages\pugixml.1.7.2\build\native\pugixml.targets" Condition="Exists('..\packages\pugixml.1.7.2\build\native\pugixml.targets')" />
-    <Import Project="..\packages\libmorda.0.5.0\build\native\libmorda.targets" Condition="Exists('..\packages\libmorda.0.5.0\build\native\libmorda.targets')" />
-    <Import Project="..\packages\libmorda.redist.0.5.1\build\native\libmorda.redist.targets" Condition="Exists('..\packages\libmorda.redist.0.5.1\build\native\libmorda.redist.targets')" />
-    <Import Project="..\packages\libmorda.symbols.0.5.1\build\native\libmorda.symbols.targets" Condition="Exists('..\packages\libmorda.symbols.0.5.1\build\native\libmorda.symbols.targets')" />
+    <Import Project="..\packages\freetype.redist.2.6.5.1\build\native\freetype.redist.targets" Condition="Exists('..\packages\freetype.redist.2.6.5.1\build\native\freetype.redist.targets')" />
+    <Import Project="..\packages\freetype.2.6.5.1\build\native\freetype.targets" Condition="Exists('..\packages\freetype.2.6.5.1\build\native\freetype.targets')" />
+    <Import Project="..\packages\libpapki.1.0.15\build\native\libpapki.targets" Condition="Exists('..\packages\libpapki.1.0.15\build\native\libpapki.targets')" />
+    <Import Project="..\packages\libpogodi.1.0.10\build\native\libpogodi.targets" Condition="Exists('..\packages\libpogodi.1.0.10\build\native\libpogodi.targets')" />
+    <Import Project="..\packages\libnitki.1.0.13\build\native\libnitki.targets" Condition="Exists('..\packages\libnitki.1.0.13\build\native\libnitki.targets')" />
+    <Import Project="..\packages\libstob.3.2.7\build\native\libstob.targets" Condition="Exists('..\packages\libstob.3.2.7\build\native\libstob.targets')" />
+    <Import Project="..\packages\pixman_static.0.32.4.3\build\native\pixman_static.targets" Condition="Exists('..\packages\pixman_static.0.32.4.3\build\native\pixman_static.targets')" />
+    <Import Project="..\packages\libsvgdom.0.2.14\build\native\libsvgdom.targets" Condition="Exists('..\packages\libsvgdom.0.2.14\build\native\libsvgdom.targets')" />
+    <Import Project="..\packages\cairo_static.1.12.8.3\build\native\cairo_static.targets" Condition="Exists('..\packages\cairo_static.1.12.8.3\build\native\cairo_static.targets')" />
+    <Import Project="..\packages\libsvgren.0.3.14\build\native\libsvgren.targets" Condition="Exists('..\packages\libsvgren.0.3.14\build\native\libsvgren.targets')" />
+    <Import Project="..\packages\libmorda.0.5.2\build\native\libmorda.targets" Condition="Exists('..\packages\libmorda.0.5.2\build\native\libmorda.targets')" />
   </ImportGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\packages\freetype2.2.6.0.1\build\native\freetype2.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\freetype2.2.6.0.1\build\native\freetype2.targets'))" />
     <Error Condition="!Exists('..\packages\glew.v140.1.12.0\build\native\glew.v140.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\glew.v140.1.12.0\build\native\glew.v140.targets'))" />
     <Error Condition="!Exists('..\packages\zlib.v120.windesktop.msvcstl.dyn.rt-dyn.1.2.8.8\build\native\zlib.v120.windesktop.msvcstl.dyn.rt-dyn.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\zlib.v120.windesktop.msvcstl.dyn.rt-dyn.1.2.8.8\build\native\zlib.v120.windesktop.msvcstl.dyn.rt-dyn.targets'))" />
     <Error Condition="!Exists('..\packages\zlib.v140.windesktop.msvcstl.dyn.rt-dyn.1.2.8.8\build\native\zlib.v140.windesktop.msvcstl.dyn.rt-dyn.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\zlib.v140.windesktop.msvcstl.dyn.rt-dyn.1.2.8.8\build\native\zlib.v140.windesktop.msvcstl.dyn.rt-dyn.targets'))" />
@@ -195,21 +192,20 @@
     <Error Condition="!Exists('..\packages\libjpeg.9.2.0.1\build\native\libjpeg.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libjpeg.9.2.0.1\build\native\libjpeg.targets'))" />
     <Error Condition="!Exists('..\packages\libpng.redist.1.6.23.1\build\native\libpng.redist.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libpng.redist.1.6.23.1\build\native\libpng.redist.targets'))" />
     <Error Condition="!Exists('..\packages\libkolme.1.0.6\build\native\libkolme.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libkolme.1.0.6\build\native\libkolme.targets'))" />
-    <Error Condition="!Exists('..\packages\libpapki.1.0.11\build\native\libpapki.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libpapki.1.0.11\build\native\libpapki.targets'))" />
-    <Error Condition="!Exists('..\packages\libaika.1.0.7\build\native\libaika.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libaika.1.0.7\build\native\libaika.targets'))" />
     <Error Condition="!Exists('..\packages\libunikod.2.0.4\build\native\libunikod.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libunikod.2.0.4\build\native\libunikod.targets'))" />
     <Error Condition="!Exists('..\packages\libpng.1.6.23.1\build\native\libpng.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libpng.1.6.23.1\build\native\libpng.targets'))" />
-    <Error Condition="!Exists('..\packages\libsvgdom.0.2.13\build\native\libsvgdom.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libsvgdom.0.2.13\build\native\libsvgdom.targets'))" />
-    <Error Condition="!Exists('..\packages\libsvgren.0.3.13\build\native\libsvgren.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libsvgren.0.3.13\build\native\libsvgren.targets'))" />
-    <Error Condition="!Exists('..\packages\pixman_static.0.32.4.2\build\native\pixman_static.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\pixman_static.0.32.4.2\build\native\pixman_static.targets'))" />
-    <Error Condition="!Exists('..\packages\cairo_static.1.12.8.2\build\native\cairo_static.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\cairo_static.1.12.8.2\build\native\cairo_static.targets'))" />
     <Error Condition="!Exists('..\packages\libutki.1.0.22\build\native\libutki.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libutki.1.0.22\build\native\libutki.targets'))" />
-    <Error Condition="!Exists('..\packages\libpogodi.1.0.9\build\native\libpogodi.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libpogodi.1.0.9\build\native\libpogodi.targets'))" />
-    <Error Condition="!Exists('..\packages\libnitki.1.0.12\build\native\libnitki.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libnitki.1.0.12\build\native\libnitki.targets'))" />
-    <Error Condition="!Exists('..\packages\libstob.3.2.6\build\native\libstob.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libstob.3.2.6\build\native\libstob.targets'))" />
     <Error Condition="!Exists('..\packages\pugixml.1.7.2\build\native\pugixml.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\pugixml.1.7.2\build\native\pugixml.targets'))" />
-    <Error Condition="!Exists('..\packages\libmorda.0.5.0\build\native\libmorda.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libmorda.0.5.0\build\native\libmorda.targets'))" />
-    <Error Condition="!Exists('..\packages\libmorda.redist.0.5.1\build\native\libmorda.redist.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libmorda.redist.0.5.1\build\native\libmorda.redist.targets'))" />
-    <Error Condition="!Exists('..\packages\libmorda.symbols.0.5.1\build\native\libmorda.symbols.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libmorda.symbols.0.5.1\build\native\libmorda.symbols.targets'))" />
+    <Error Condition="!Exists('..\packages\freetype.redist.2.6.5.1\build\native\freetype.redist.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\freetype.redist.2.6.5.1\build\native\freetype.redist.targets'))" />
+    <Error Condition="!Exists('..\packages\freetype.2.6.5.1\build\native\freetype.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\freetype.2.6.5.1\build\native\freetype.targets'))" />
+    <Error Condition="!Exists('..\packages\libpapki.1.0.15\build\native\libpapki.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libpapki.1.0.15\build\native\libpapki.targets'))" />
+    <Error Condition="!Exists('..\packages\libpogodi.1.0.10\build\native\libpogodi.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libpogodi.1.0.10\build\native\libpogodi.targets'))" />
+    <Error Condition="!Exists('..\packages\libnitki.1.0.13\build\native\libnitki.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libnitki.1.0.13\build\native\libnitki.targets'))" />
+    <Error Condition="!Exists('..\packages\libstob.3.2.7\build\native\libstob.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libstob.3.2.7\build\native\libstob.targets'))" />
+    <Error Condition="!Exists('..\packages\pixman_static.0.32.4.3\build\native\pixman_static.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\pixman_static.0.32.4.3\build\native\pixman_static.targets'))" />
+    <Error Condition="!Exists('..\packages\libsvgdom.0.2.14\build\native\libsvgdom.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libsvgdom.0.2.14\build\native\libsvgdom.targets'))" />
+    <Error Condition="!Exists('..\packages\cairo_static.1.12.8.3\build\native\cairo_static.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\cairo_static.1.12.8.3\build\native\cairo_static.targets'))" />
+    <Error Condition="!Exists('..\packages\libsvgren.0.3.14\build\native\libsvgren.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libsvgren.0.3.14\build\native\libsvgren.targets'))" />
+    <Error Condition="!Exists('..\packages\libmorda.0.5.2\build\native\libmorda.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libmorda.0.5.2\build\native\libmorda.targets'))" />
   </Target>
 </Project>
