--- a/nuget/nuget.autopkg.in
+++ b/nuget/nuget.autopkg.in
@@ -1,6 +1,6 @@
 nuget{
 	nuspec{
-		id = mordavokne;
+		id = libmordavokne;
 		version : $(version);
 		title: Intrusive C++ GUI library;
 		authors: {Ivan Gagis};
