link example against stdc++

--- a/examples/basic/makefile
+++ b/examples/basic/makefile
@@ -15,7 +15,6 @@ this_cxxflags += -g
 this_cxxflags += -O2
 this_cxxflags += -std=c++11
 
-this_cxxflags += -D_GLIBCXX_USE_CXX11_ABI=0 #use old ABI
 
 ifeq ($(debug), true)
     this_cxxflags += -DDEBUG
@@ -39,7 +38,7 @@ else ifeq ($(prorab_os),linux)
     this_ldlibs += `pkg-config mordavokne --libs`
 endif
 
-this_ldlibs += -lnitki -laika -lpogodi -lstob -lmorda
+this_ldlibs += -lnitki -laika -lpogodi -lstob -lmorda -lstdc++
 
 
 
