--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -29,11 +29,36 @@ model {
             cppFlags.add("-fexceptions")
             cppFlags.add("-frtti")
             cppFlags.add("-I" + projectDir.getAbsolutePath() + "/build/ndkLibs/include")
-            ldLibs.addAll(['android', 'log'])
+            ldLibs.addAll(['android', 'log',
+                           'EGL', 'morda-opengles2-ren', 'morda', 'nitki', 'stob', 'papki',
+                           'png', 'jpeg', 'GLESv2', 'z', 'freetype2', 'svgren', 'svgdom',
+                           'pugixml', 'cairo', 'pixman','c++'])
             // build a default combined apk including all ABIs.
             // abiFilters.addAll(['x86'])
         }
-
+        abis {
+            create("armeabi") {
+                ldFlags.add("-L" + projectDir.getAbsolutePath() + "/build/ndkLibs/armeabi")
+            }
+            create("armeabi-v7a") {
+                ldFlags.add("-L" + projectDir.getAbsolutePath() + "/build/ndkLibs/armeabi-v7a")
+            }
+            create("arm64-v8a") {
+                ldFlags.add("-L" + projectDir.getAbsolutePath() + "/build/ndkLibs/arm64-v8a")
+            }
+            create("x86") {
+                ldFlags.add("-L" + projectDir.getAbsolutePath() + "/build/ndkLibs/x86")
+            }
+            create("x86_64") {
+                ldFlags.add("-L" + projectDir.getAbsolutePath() + "/build/ndkLibs/x86_64")
+            }
+            create("mips") {
+                ldFlags.add("-L" + projectDir.getAbsolutePath() + "/build/ndkLibs/mips")
+            }
+            create("mips64") {
+                ldFlags.add("-L" + projectDir.getAbsolutePath() + "/build/ndkLibs/mips64")
+            }
+        }
         sources {
             main {
                 jni {
@@ -78,9 +103,12 @@ repositories {
 }
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-//    compile 'io.github.igagis:libutki:+'
-//    compile 'io.github.igagis:libpapki:+'
-//    compile 'io.github.igagis:libunikod:+'
+    compile 'io.github.igagis:libutki:+'
+    compile 'io.github.igagis:libkolme:+'
+    compile 'io.github.igagis:libpapki:+'
+    compile 'io.github.igagis:libmorda:+'
+    compile 'io.github.igagis:libnitki:+'
+    compile 'io.github.igagis:libmorda_opengles2_ren:+'
 }
 
 
