--- a/android/libmordavokne-$(version).pom.in
+++ b/android/libmordavokne-$(version).pom.in
@@ -16,6 +16,20 @@
 	  </dependency>
 	  <dependency>
 		  <groupId>io.github.igagis</groupId>
+		  <artifactId>libpapki</artifactId>
+		  <version>[1.0.35,)</version>
+		  <type>aar</type>
+		  <scope>compile</scope>
+	  </dependency>
+	  <dependency>
+		  <groupId>io.github.igagis</groupId>
+		  <artifactId>libkolme</artifactId>
+		  <version>[1.0.10,)</version>
+		  <type>aar</type>
+		  <scope>compile</scope>
+	  </dependency>
+	  <dependency>
+		  <groupId>io.github.igagis</groupId>
 		  <artifactId>libmorda</artifactId>
 		  <version>[0.5.34,)</version>
 		  <type>aar</type>
@@ -25,6 +39,13 @@
 		  <groupId>io.github.igagis</groupId>
 		  <artifactId>libmorda_opengles2_ren</artifactId>
 		  <version>[0.1.9,)</version>
+		  <type>aar</type>
+		  <scope>compile</scope>
+	  </dependency>
+	  <dependency>
+		  <groupId>io.github.igagis</groupId>
+		  <artifactId>libnitki</artifactId>
+		  <version>[1.0.16,)</version>
 		  <type>aar</type>
 		  <scope>compile</scope>
 	  </dependency>
