--- a/android/libmordavokne/src/main/AndroidManifest.xml
+++ b/android/libmordavokne/src/main/AndroidManifest.xml
@@ -1,8 +1,33 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-
+    xmlns:tools="http://schemas.android.com/tools"
     package="io.github.igagis.libmordavokne">
 
-    <application>
+    <supports-screens
+        android:anyDensity="true"
+        android:largeScreens="true"
+        android:xlargeScreens="true"
+        />
+
+    <!-- This is the platform API where NativeActivity was introduced. -->
+    <uses-sdk android:minSdkVersion="9" />
+
+    <application tools:node="merge">
+        <activity
+            android:name=".MordaVOkneActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:theme="@android:style/Theme.NoTitleBar"
+            android:hasCode="true"
+            android:windowSoftInputMode="adjustResize"
+            >
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="mordavokneapp"
+                />
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
     </application>
 
