--- a/android/libmordavokne/build.gradle
+++ b/android/libmordavokne/build.gradle
@@ -20,11 +20,12 @@ model {
             ldLibs.addAll(['android', 'log', 'stob', 'EGL', 'nitki', 'morda-opengles2-ren',
                             'morda', 'papki',
                             'png', 'jpeg', 'GLESv2', 'z', 'freetype2',
-                            'svgren', 'svgdom', 'cairo', 'pixman', 'pugixml', 'c++'])
+                            'svgren', 'svgdom', 'cairo', 'pixman', 'mikroxml', 'unikod', 'c++'])
             stl = 'c++_shared'
             cppFlags.add("-std=c++11")
             cppFlags.add("-fexceptions")
             cppFlags.add("-frtti")
+            cppFlags.add("-fintegrated-as") //needed to avoid assembler error since NDK r15
             cppFlags.add("-I" + projectDir.getAbsolutePath() + "/build/ndkLibs/include")
         }
         abis {
